print fix